# AOC

./: LICENSE
2015/: .gitignore  .merlin  README.md  day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  day_09.ml  day_10.ml  day_11.ml  day_12.ml  day_13.ml  day_14.ml  day_15.ml  day_16.ml  day_17.ml  day_18.ml  day_19.ml  day_20.ml  day_21.ml  day_22.ml  day_23.ml
2016/: .gitignore  README.md  advent-of-code.cabal
2016/app/: Main.hs
2016/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
2017/: advent-of-code.cabal
2017/app/: Main.hs
2017/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day09.hs  day08.hs
2018/: .gitignore  ChangeLog.md  TAGS  package.yaml  stack.yaml
2018/app/: Main.hs
2018/data/: Day15.txt  Day17.txt  Day24.txt  Day24test.txt
2018/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day20.hs  Day22.hs  Day23.hs  Day24.hs
2019/: .gitignore  package.yaml
2019/app/: Main.hs
2019/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day22.hs  Foo.hs
2020/: AOC2020.cabal  LICENSE  package.yaml  stack.yaml
2020/app/: Main.hs
2020/src/: AOC.hs  Day00.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day17_part2.hs  Day18.hs  Day19.hs
