name:                advent-of-code
version:             2017.1.0.0
synopsis:            My solutions to the 2017 AOC
homepage:            https://github.com/tftio/AOC-2017
license:             BSD3
license-file:        LICENSE
author:              James Felix Black
maintainer:          tftio@icloud.com
copyright:           2017 James Felix Black
category:            Pedagogy
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/advent-of-code#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Day07
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7.1,
                       split
  default-language:    Haskell2010

executable advent-of-code
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       advent-of-code, base, containers >= 0.5.7.1
  default-language:    Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       advent-of-code, base, containers >= 0.5.7.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tftio/AOC-2017
